--- a/requirements.txt
+++ b/requirements.txt
@@ -57,3 +57,10 @@ flake8>=6.0.0
 # redis>=5.0.0
 # psycopg2-binary>=2.9.0
 # sqlalchemy>=2.0.0
+
+# OCR and image processing
+PyMuPDF>=1.23.0
+pytesseract>=0.3.10
+Pillow>=9.0.0
+pdf2image>=1.16.0
+opencv-python>=4.8.0
